2009-11-27  Chris Morley

	* src/formats/fastsearchformat.cpp: Give an estimate of the expected
	indexing time.
	When searching, can use [#6] etc. in -s option target to find both
	aromatic and non-aromatic atoms in second SMARTS stage. Also use ~ bond
	to match both aromatic and non-aromatic bonds in fastsearch stage.
	Moves some way towards allowing behaviour expected in #2828279.
	
	* src/formats/xml/cmlformat.cpp: Accept T for triple bond. Fixes
	#2903926
 
	
2009-11-27  Chris Morley

	* src/formats/smilesformat.cpp: add sread and write support for $
	quadruple bond.

2009-11-26  Chris Morley

	* src/transform.cpp:Avoid leading separators with --append

	* data/plugindefines.txt: comment out less useful examples


2009-11-23  Chris Morley

	* tools/nbabel: Renamed as obabel. This is an alternative commandline
	interface, e.g.   obabel in.smi -O out.sdf

	* tools/svgdepict.cpp: demo program producing a file for each molecule.
	
	Tidied WindowsOBF Tools project files.
	CMakefiles not updated.

2009-11-22  Chris Morley

	* data/element.txt, data/svgformat.script, include/openbabel/depict,
	include/openbabel/depict/depict.h, include/openbabel/depict/painter.h,
	include/openbabel/depict/svgpainter.h, src/depict/depict.cpp,
	src/depict/svgpainter.cpp, src/formats/svgformat.cpp: new files
	Add tweaked versions of Tim's OBDepiction and OBPainter classes with
	a new SVGPainter class using no external libraries. SVGFormat displays
	multiple molecules in a table, designed to be viewed in Firefox.

2009-11-21  Chris Morley

	* include/openbabel/alias.h, src/alias.cpp: extensively revised.
	Expanded aliases on 2D or 3D molecules have coordinates generated
	by builder. (Nitro group not quite right.) Can revert to alias form for
	output and display. Can also generate an alias form from normal molecule;
	not sure how useful this is. 
	 
	* data/superatom.txt: changed format; now also stores a right-connected
	form and color.
	